Wed Apr 15 11:53:35 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* dir.c (fnmatch_helper): use rb_enc_precise_mbclen and
	  fail if bytes are invalid. [ruby-dev:38307]

Tue Apr 14 18:11:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (bracket): if same in bytes, path is matching.
	  [ruby-dev:38305]

Mon Apr 13 17:21:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): scan coderange incrementally.

Mon Apr 13 11:35:55 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* sprintf.c (rb_str_format): optimize previous commit.
	  [ruby-list:45954]

Mon Apr 13 10:58:54 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* sprintf.c (rb_str_format): check encoding compatibility only on
	  real parts.

Sun Apr 12 19:54:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (bracket, fnmatch_helper): compare bytewise first, to get
	  rid of invalid byte sequence.  [ruby-dev:38303]

Sat Apr 11 08:45:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (Makefile): phony ruby target needs empty command.

Fri Apr 10 11:32:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (up): updates timestamp file.

Fri Apr 10 04:54:01 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (Makefile): info-program needs common.mk.

Fri Apr 10 03:46:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_INSTALL_NAME): use --program-transform-name.

	* instruby.rb, mkconfig.rb: deal with --program-transform-name
	  better.  now supports s, y commands and single addressing.

Thu Apr  9 23:59:11 2009  Tanaka Akira  <akr@fsij.org>

	* configure.in: don't override the rule for ruby.

Wed Apr  8 21:58:12 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* string.c (rb_str_dump): buffer length plus one byte for null
	  terminator.  [ruby-dev:38294]

	* test/ruby/test_m17n.rb (test_str_dump): add a test for above.

Wed Apr  8 20:08:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
